--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8" />
@@ -7,7 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
-  <title>Vite + React</title>
+  <title>SMIVE</title>
+
+  <meta name="copyright" content="SMIVE Refacciones y Mantenimiento">
+  <meta name="author" content="stake dev">
+  <meta name="audience" content="all">
+  <meta name="description" content="SMIVE Refacciones y Mantenimiento. Servicios de Albañileria, pintura, plomeria, techos, impermeabilizacion, gas">
+  <meta name="keywords" content="SMIVE Refacciones y Mantenimiento. Servicios de Albañileria, pintura, plomeria, techos, impermeabilizacion, gas">
+  <meta name="robots" content="index, all, follow" />
+  <meta name="category" content="SMIVE Refacciones y Mantenimiento. Servicios de Albañileria, pintura, plomeria, techos, impermeabilizacion, gas" />
 </head>
 
 <body>
