--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <link rel="icon" type="image/svg+xml" href="/images/logo-ico.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+
+  <meta name="google-site-verification" content="6LezBvsqAAAAALFRZxgUH_-N00TgCwBf1wBsL0YO" />
+
 
   <title>SMIVE</title>
 
@@ -14,6 +18,12 @@
   <meta name="audience" content="all">
   <meta name="robots" content="index, all, follow" />
 
+
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="SMIVE - Refacciones y mantenimiento integral">
+  <meta property="og:description" content="SMIVE - Refacciones y Mantenimiento en el hogar">
+  <meta property="og:image" content="/images/smive-logo.jpg">
+  <meta property="og:url" content="URL_de_la_página">
 </head>
 
 <body>
