cambio de notebook

--- a/index.html
+++ b/index.html
@@ -8,21 +8,29 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
 
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="">
+  <meta property="og:description" content="" >
+  <meta name="og:keywords" content="">
+  <!-- <meta name="og:category" content=""> -->
+  <meta name="description"
+    content="SMIVE ofrece servicios integrales de mantenimiento y refacciones para viviendas y edificios en CABA - Argentina. Especializados en plomería, herreria, albañilería, revestimiento, pintura, impermeabilización, electricidad, construcción en seco y consultoría. Soluciones confiables y profesionales para tu hogar o empresa." />
 
+  <meta name="keywords"
+    content="mantenimiento hogar, refacciones construcción, plomería, herreria, albañilería, revestimiento, pintura, impermeabilización, electricidad, construcción en seco, consultoría construcción, servicios integrales vivienda, SMIVE, mantenimiento edificios" />
+
+  <meta name="category" content="Construcción y mantenimiento de viviendas y edificios en CABA - Argentina" />
+  <meta property="og:image" content="/images/smive-logo.jpg" />
+  <meta property="og:url" content="https://smive-reparaciones.com/">
+  <meta name="google-site-verification" content="g1Qe7AAUqCd3UKi9Omamn8Nj429NspL3dWXgW5xKTaA" />
+
+  <meta name="copyright" content="SMIVE Refacciones y Mantenimiento" />
+  <meta name="author" content="stake dev" />
+  <meta name="audience" content="all" />
+  <meta name="robots" content="index, all, follow" />
 
   <title>SMIVE</title>
 
-  <meta name="copyright" content="SMIVE Refacciones y Mantenimiento">
-  <meta name="author" content="stake dev">
-  <meta name="audience" content="all">
-  <meta name="robots" content="index, all, follow" />
-
-
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="SMIVE - Refacciones y mantenimiento integral">
-  <meta property="og:description" content="SMIVE - Refacciones y Mantenimiento en el hogar">
-  <meta property="og:image" content="/images/smive-logo.jpg">
-  <meta property="og:url" content="URL_de_la_página">
 </head>
 
 <body>
